--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@ body {
 }
 
 a {
-  color: #ff7f5d;
   text-decoration: none;
 }
 
@@ -31,6 +30,7 @@ h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
+  font-weight: bold;
 }
 
 /*--------------------------------------------------------------
@@ -680,6 +680,8 @@ section {
   font-family: "Raleway", sans-serif;
   font-size: 14px;
 }
+
+
 
 /*--------------------------------------------------------------
 # Our Values
@@ -1517,6 +1519,14 @@ section {
   100% {
     transform: rotate(360deg);
   }
+}
+
+/*--------------------------------------------------------------
+# Map
+--------------------------------------------------------------*/
+#map {
+  height: 400px;
+  width: 100%;
 }
 
 /*--------------------------------------------------------------
