--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -40,7 +40,8 @@ img {
   
   .flip-card-back {
     padding-top: 10px;
-    background-color: #222;
-    color: white;
+    background-color: #ffffff;
+    color: black;
     transform: rotateY(180deg);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
