--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -23,7 +23,7 @@ body {
   height: 6rem;
   margin: 0.5rem;
   border-radius: 0.3em;
-  background-image: var(--gradient);
+  background-image: url("./../img/emo.jpg");
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25), 4px 4px 10px rgba(0, 0, 0, 0.2);
   position: relative;
   transition: 0.3s;
