--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #ff7f5d;
+  border: 6px solid #ecdd72;
   border-top-color: white;
   border-radius: 50%;
   width: 60px;
@@ -80,7 +80,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #ff7f5d;
+  background: #ecdd72;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -122,7 +122,7 @@ h6 {
 
 #header.fixed-top,
 #header.header-inner-pages {
-  background: rgba(21, 5, 23, 0.8);
+  background: #21467b;
 }
 
 #header.fixed-top {
@@ -242,7 +242,7 @@ h6 {
   height: 2px;
   bottom: -7px;
   left: 0;
-  background-color: #ff7f5d;
+  background-color: #ecdd72;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -296,7 +296,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover > a {
-  color: #ff7f5d;
+  color: #ecdd72;
 }
 
 .navbar .dropdown:hover > ul {
@@ -401,7 +401,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover > a {
-  color: #ff7f5d;
+  color: #ecdd72;
 }
 
 .navbar-mobile .getstarted,
@@ -436,7 +436,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover > a {
-  color: #ff7f5d;
+  color: #ecdd72;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -523,8 +523,8 @@ h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #ff7f5d;
-  border: 2px solid #ff7f5d;
+  background: #ecdd72;
+  border: 2px solid #ecdd72;
 }
 
 @media (min-width: 1024px) {
@@ -576,7 +576,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #ff7f5d;
+  background: #ecdd72;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -614,7 +614,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #ff7f5d;
+  color: #ecdd72;
   line-height: 1;
 }
 
@@ -632,14 +632,14 @@ section {
   border-radius: 5px;
   transition: 0.3s;
   line-height: 1;
-  color: #ff7f5d;
+  color: #ecdd72;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #ff7f5d;
+  border: 2px solid #ecdd72;
 }
 
 .about .content .btn-learn-more:hover {
-  background: #ff7f5d;
+  background: #ecdd72;
   color: #fff;
   text-decoration: none;
 }
@@ -681,7 +681,7 @@ section {
 .counts .counters span {
   font-size: 48px;
   display: block;
-  color: #ff7f5d;
+  color: #ecdd72;
 }
 
 .counts .counters p {
@@ -690,8 +690,6 @@ section {
   font-family: "Raleway", sans-serif;
   font-size: 14px;
 }
-
-
 
 /*--------------------------------------------------------------
 # Our Values
@@ -743,7 +741,7 @@ section {
 }
 
 .our-values .card:hover .card-body {
-  background: #ff7f5d;
+  background: #ecdd72;
 }
 
 .our-values .card:hover .read-more a,
@@ -881,7 +879,7 @@ section {
 }
 
 .services .icon-box:hover .title a {
-  color: #ff7f5d;
+  color: #ecdd72;
 }
 
 .services .description {
@@ -966,11 +964,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #ff7f5d;
+  border: 1px solid #ecdd72;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ff7f5d;
+  background-color: #ecdd72;
 }
 
 /*--------------------------------------------------------------
@@ -1007,8 +1005,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #ff7f5d;
-  border: 2px solid #ff7f5d;
+  background: #ecdd72;
+  border: 2px solid #ecdd72;
 }
 
 /*--------------------------------------------------------------
@@ -1033,12 +1031,12 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #ff7f5d;
+  color: #ecdd72;
 }
 
 .portfolio #portfolio-flters li.filter-active::before,
 .portfolio #portfolio-flters li.filter-active::after {
-  color: #ff7f5d;
+  color: #ecdd72;
 }
 
 .portfolio .portfolio-item {
@@ -1091,7 +1089,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #ff7f5d;
+  color: #ecdd72;
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -1130,14 +1128,14 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #ff7f5d;
+  border: 1px solid #ecdd72;
 }
 
 .portfolio-details
   .portfolio-details-slider
   .swiper-pagination
   .swiper-pagination-bullet-active {
-  background-color: #ff7f5d;
+  background-color: #ecdd72;
 }
 
 .portfolio-details .portfolio-info {
@@ -1225,7 +1223,7 @@ section {
 }
 
 .team .member .social a:hover {
-  background: #ff7f5d;
+  background: #ecdd72;
 }
 
 .team .member .social i {
@@ -1287,7 +1285,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #ff7f5d;
+  color: #ecdd72;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1319,7 +1317,7 @@ section {
 }
 
 .pricing ul i {
-  color: #ff7f5d;
+  color: #ecdd72;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1337,7 +1335,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #ff7f5d;
+  background: #ecdd72;
   display: inline-block;
   padding: 8px 35px 9px 35px;
   border-radius: 4px;
@@ -1356,7 +1354,7 @@ section {
 
 .pricing .featured h3 {
   color: #fff;
-  background: #ff7f5d;
+  background: #ecdd72;
 }
 
 .pricing .advanced {
@@ -1368,7 +1366,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #ff7f5d;
+  background: #ecdd72;
   color: #fff;
 }
 
@@ -1437,7 +1435,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #ff7f5d;
+  color: #ecdd72;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1464,7 +1462,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #ff7f5d;
+  color: #ecdd72;
   float: left;
   width: 44px;
   height: 44px;
@@ -1499,7 +1497,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #ff7f5d;
+  background: #ecdd72;
   color: #fff;
 }
 
@@ -1562,7 +1560,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #ff7f5d;
+  border-color: #ecdd72;
 }
 
 .contact .php-email-form input {
@@ -1574,7 +1572,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #ff7f5d;
+  background: #ecdd72;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1713,7 +1711,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #ff7f5d;
+  background: #ecdd72;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1744,7 +1742,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #ff7f5d;
+  background: #ecdd72;
   color: #fff;
   text-decoration: none;
 }
